--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <h2>Projects</h2>
     <main>
         <div class="row">
-            <a href="./0/index.html">Computer Vision</a>
+            <a href="./0/index.html">Project 0 - Getting Started</a>
+            <a href="./1/index.html">Project 1 - Histogram and Filtering</a>
+        </div>
+        <div>
+            <a href="./2/index.html">Project 2 — Image Homography and Warping</a>
+            <a href="./3/index.html">Project 3 — Object Detection and Human–Object Interaction</a>
         </div>
     </main>
 </body>
