--- a/1/index.html
+++ b/1/index.html
@@ -57,7 +57,7 @@
                     </ul>
                 </ul>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img class="hist" src="img/image1hist.png" alt="Histrogram" width="350" height="250"/>
                         <figcaption>Original and Histrogram image 1</figcaption>
@@ -92,7 +92,7 @@
             <h3>(b) Creative Task: Apply to Your Own Images (required)</h3>
             <h4>Question 2: Find at least one of your own images with poor contrast (too dark, too bright, or low contrast).<br>Apply your histogram equalization implementation to this image and show the result.</h4>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/skateHist.png" alt="Girl Skating" width="350" height="250"/>
                         <figcaption>Original and Histrogram</figcaption>
@@ -133,7 +133,7 @@
                     </ul>
             </ul>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/image4Naive.png" alt="Gaussian image" width="350" height="150"/>
                         <figcaption>Naive Approach</figcaption>
@@ -191,7 +191,7 @@
                     </ul>
             </ul>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/ctSharpening.png" alt="CT scan of a heart" width="850" height="475"/>
                         <figcaption>Sharpening of the CT scan image</figcaption>
@@ -210,7 +210,7 @@
             </div>
             <br>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/alienSharpening.png" alt="Alien" width="825" height="475"/>
                         <figcaption>Sharpening of an image of an Alien</figcaption>
@@ -234,7 +234,7 @@
             <h3>Question 1: Implementation of Anisotropic Diffusion</h3>
             <p>Run your implementation for different values of the parameter &#922; and different numbers of iterations. How does the choice of &#922; affect the result? What happens as you increase the number of iterations?</p>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/expo1.png" alt="Woman with a feather hat" width="825" height="450"/>
                         <figcaption>Exponential Diffusion of noisy test image 1</figcaption>
@@ -248,7 +248,7 @@
                 </article>
             </div>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/expo2.png" alt="MRI slice of a brain" width="825" height="450"/>
                         <figcaption>Exponential Diffusion of noisy test image 2</figcaption>
@@ -271,7 +271,7 @@
                 <li>Compare results side-by-side: how does anisotropic diffusion preserve edges differently? Discuss the results and the differences you observed.</li>
             </ul>
             <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/comparison.png" alt="Woman in a hat with a feather and MRI slice of a brain" width="825" height="450"/>
                         <figcaption></figcaption>
