--- a/0/index.html
+++ b/0/index.html
@@ -21,7 +21,7 @@
             <img src="img/visual.png" alt="10 clothing images with labels" width="600" height="300"/>
             <h3>Question 2: Hyperparameter analysis</h3>
             <h4>2.1: Try to use different learning rates, plot how validation loss changes. </h4>
-            <article>
+            <article class="results">
                 <figure>
                     <img src="img/lr1.png" alt="graph" width="175" height="175"/>
                     <figcaption>Learning rate of .1</figcaption>
@@ -41,7 +41,7 @@
             </article>
             <p>All of the above graphs are with a batch size of 256</p>
             <h4>2.2: Try to use different batch sizes, how validation and training loss changes?</h4>
-            <article>
+            <article class="results">
                 <figure>
                     <img src="img/b50.png" alt="graph" width="175" height="175"/>
                     <figcaption>batch size of 50</figcaption>
@@ -96,7 +96,7 @@
                 Causing the gradient to vanish
             </p>
             <h3>Question 2</h3>
-            <article>
+            <article class="results">
                 <figure>
                     <img src="img/mlp.png" alt="graph" width="175" height="175"/>
                     <figcaption>Multilayer Perceptron with 1 hidden layer </figcaption>
@@ -127,7 +127,7 @@
         <div>
             <h2>Part 3: LeNet</h2>
             <h3>Question 1:</h3>
-            <article>
+            <article class="results">
                 <figure>
                     <img src="img/e5.png" alt="graph" width="175" height="175"/>
                     <figcaption>5 epochs</figcaption>
@@ -143,7 +143,7 @@
             </article>
             <p>Each took longer to run with more epochs, but the accuracy got better.</p>
             <h3>Question 2: Modifying LeNet: Replace average pooling with max-pooling, replace the Sigmoid layer with ReLU. </h3>
-            <article>
+            <article class="results">
                 <figure>
                     <img src="img/e5relu.png" alt="graph" width="175" height="175"/>
                     <figcaption>5 epochs</figcaption>
