--- a/1/index.html
+++ b/1/index.html
@@ -21,7 +21,7 @@
             <div>
                 <h3>Question 1:</h3>
                 <div class="images">
-                <article>
+                <article class="results">
                     <figure>
                         <img src="img/hall.jpeg" alt="Hallway with lines drawn" width="300" height="400"/>
                         <figcaption>Hallway in Weir Hall,<br>Persepctive</figcaption>
