--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                 <h3 class="title">Object Detection and Human–Object Interaction</h3>
             </a>
         </div>
+        <br>
+        <div class="row">
+            <a class="card" href="./3/index.html">
+                <span class="badge">
+                    Project 4 — Diffusion Models
+                </span>
+                <h3 class="title">Diffusion Models</h3>
+            </a>
+        </div>
     </main>
     <br>
     <footer>
